--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -11,12 +11,21 @@
   <body>
     <div id="container">
       <div id="header">
-        <h1><a href="/">Ryan Houston</a></h1>
+        <h1 id="logo"><a href="/">Ryan Houston</a></h1>
         <p>Software development, homebrewing, and life that happens in between.</p>
+
+        <ul class="socials">
+          <li class="twitter"><a href="http://twitter.com/#!/houston_ryan">Twitter</a></li>
+          <li class="facebook"><a href="http://facebook.com/ryan.j.houston">Facebook</a></li>
+          <li class="linkedin"><a href="http://www.linkedin.com/pub/ryan-houston/5/b41/415">Linkedin</a></li>
+        </ul>
+
+        <div class="clear"></div>
       </div>
 
       {{ content }}
 
+      <div class="clear"></div>
       <div id="footer">
         <p>&copy; 2011 Ryan Houston. All Rights Reserved.</p>
       </div>
