--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<div class="entry">
-  <h2>{{ page.title }}</h2>
-  <div class="entry-date-header">
-    posted on <span class="entry-date">{{ page.date }}<?span>
+<div class="post">
+  <h2 class="post-title">{{ page.title }}</h2>
+  <div class="post-date-header">
+    posted on <span class="post-date">{{ page.date | date: "%B %d %Y" }}<?span>
   </div>
 
   {{ content }}
