--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -12,15 +12,12 @@
     <div id="container">
       <div id="header">
         <h1 id="logo"><a href="/">Ryan Houston</a></h1>
-        <p>Software development, homebrewing, and life that happens in between.</p>
+        <em>Software development, homebrewing, and life that happens in between.</em>
 
-        <ul class="socials">
-          <li class="twitter"><a href="http://twitter.com/#!/houston_ryan">Twitter</a></li>
-          <li class="facebook"><a href="http://facebook.com/ryan.j.houston">Facebook</a></li>
-          <li class="linkedin"><a href="http://www.linkedin.com/pub/ryan-houston/5/b41/415">Linkedin</a></li>
-        </ul>
+      </div>
 
-        <div class="clear"></div>
+      <div id="sidebar">
+        {% include sidebar.html %}
       </div>
 
       {{ content }}
