Add brewing category, post, pagination plugin

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <div class="post">
   <h2 class="post-title">{{ page.title }}</h2>
   <div class="post-date-header">
-    posted on <span class="post-date">{{ page.date | date: "%B %d %Y" }}<?span>
+    <em>posted on <span class="post-date">{{ page.date | date: "%B %d %Y" }}</span></em>
   </div>
 
   {{ content }}
