--- a/_includes/post_summary.html
+++ b/_includes/post_summary.html
@@ -1,7 +1,9 @@
 <div class="post">
 
   <div class="post-header">
-    <span class="post-date">{{ post.date | date: "%B %d %Y" }}</span>
+    <div class="post-date-header">
+      <em><span class="post-date">{{ post.date | date: "%B %d %Y" }}</span></em>
+    </div>
     <a href="{{ post.url }}" class="post-link">
       <h2 class="post-title">{{ post.title }}</h2>
     </a>
