--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,16 +1,36 @@
-<p>
-  <strong>Ryan Houston</strong>is a software engineer, homebrewer, and general tinkerer in the Washington D.C. metro area.
-</p>
+<div id="sidebar">
+  <div class="sidebar-module">
+    <p>
+      <strong>Ryan Houston</strong> is a software engineer, homebrewer, and general tinkerer in the Washington D.C. metro area.
+    </p>
 
-<p>
-  <strong>Email:</strong> ryanhouston83@gmail.com <br />
-  <strong>Github:</strong> <a href="http://github.com/RyanHouston">RyanHouston</a>
-</p>
+    <p>
+      <strong>Email:</strong> ryanhouston83@gmail.com <br />
+      <strong>Github:</strong> <a href="http://github.com/RyanHouston">RyanHouston</a>
+    </p>
 
-<ul class="socials">
-  <li class="twitter"><a href="http://twitter.com/#!/houston_ryan">Twitter</a></li>
-  <li class="facebook"><a href="http://facebook.com/ryan.j.houston">Facebook</a></li>
-  <li class="linkedin"><a href="http://www.linkedin.com/pub/ryan-houston/5/b41/415">Linkedin</a></li>
-</ul>
+    <ul class="socials">
+      <li class="twitter"><a href="http://twitter.com/#!/houston_ryan">Twitter</a></li>
+      <li class="facebook"><a href="http://facebook.com/ryan.j.houston">Facebook</a></li>
+      <li class="linkedin"><a href="http://www.linkedin.com/pub/ryan-houston/5/b41/415">Linkedin</a></li>
+    </ul>
+    <div class="clear"></div>
+  </div>
 
-<div class="clear"></div>
+  {% if site.categories %}
+  <div class="sidebar-module">
+    <h3>Post Topics</h3>
+    <div id="categories">
+      <ul id="category-list">
+      {% for category in site.categories %}
+        <li>
+          <a href="/{{ category | first }}">{{ category | first }}</a>
+          ( {{ category | last | size }} )
+        </li>
+      {% endfor %}
+      </ul>
+    </div>
+  </div>
+  {% endif %}
+
+</div>
