Update disqus url

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
 
       // The following are highly recommended additional parameters. Remove the slashes in front to use.
       var disqus_identifier = '{{ page.disqus-id }}';
-      var disqus_url = '{{ page.url }}';
+      var disqus_url = 'http://ryanjhouston.com/{{ page.url }}';
 
       /* * * DON'T EDIT BELOW THIS LINE * * */
       (function() {
