--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -11,7 +11,7 @@
   <body>
     <div id="container">
       <div id="header">
-        <h1 id="logo"><a href="/">Ryan Houston</a></h1>
+        <a href="/"><h1 id="logo">Ryan Houston</h1><img src="/images/houston_banner.jpg"/></a>
         <em>Software development, homebrewing, and life that happens in between.</em>
 
       </div>
