Little css tweak to tagline

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -12,7 +12,7 @@
     <div id="container">
       <div id="header">
         <a href="/"><h1 id="logo">Ryan Houston</h1><img src="/images/houston_banner.jpg"/></a>
-        <em>Software development, homebrewing, and life that happens in between.</em>
+        <div id="tagline"><em>Software development, homebrewing, and life that happens in between.</em></div>
 
       </div>
 
