Update banner with transparent lettering png

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -11,8 +11,10 @@
   <body>
     <div id="container">
       <div id="header">
-        <a href="/"><h1 id="logo">Ryan Houston</h1><img src="/images/houston_banner.jpg"/></a>
-        <div id="tagline"><em>Software development, homebrewing, and life that happens in between.</em></div>
+        <a href="/"><h1 id="logo">Ryan Houston</h1><img src="/images/houston_banner3.png"/></a>
+        <div id="tagline">
+			<em>Software development, homebrewing, and life that happens in between.</em>
+		</div>
 
       </div>
 
