Layout uses bootstrap + removed unneeded css

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-<div id="sidebar">
+<div id="sidebar" class="span4">
   <div class="sidebar-module">
     <p>
       <strong>Ryan Houston</strong> is a software engineer, homebrewer, and general tinkerer in the Washington D.C. metro area.
