--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 layout: base
 title: Ryan Houston
 ---
-<div id="content">
+<div id="content" class="span12">
   {% if paginator.posts %}
     {% for post in paginator.posts %}
       {% include post_summary.html %}
