Update base colors to match dark layout

--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 ---
-<div id="content">
+<div id="content" class="span12">
   {% for post in paginator.posts %}
     {% include post_summary.html %}
   {% endfor %}
