--- a/css/bootstrap/variables.less
+++ b/css/bootstrap/variables.less
@@ -4,15 +4,15 @@
 
 
 // Links
-@linkColor:         #0069d6;
+@linkColor:         #d77223;
 @linkColorHover:    darken(@linkColor, 15);
 
 // Grays
-@black:             #000;
-@grayDark:          lighten(@black, 25%);
-@gray:              lighten(@black, 50%);
-@grayLight:         lighten(@black, 75%);
-@grayLighter:       lighten(@black, 90%);
+@black:             #494949;
+@grayDark:          lighten(@black, 90%);
+@gray:              lighten(@black, 75%);
+@grayLight:         lighten(@black, 50%);
+@grayLighter:       lighten(@black, 25%);
 @white:             #fff;
 
 // Accent Colors
@@ -39,7 +39,7 @@
 
 // Color Scheme
 // Use this to roll your own color schemes if you like (unused by Bootstrap by default)
-@baseColor:         @blue;                  // Set a base color
+@baseColor:         #2a2a2a;                  // Set a base color
 @complement:        spin(@baseColor, 180);  // Determine a complementary color
 @split1:            spin(@baseColor, 158);  // Split complements
 @split2:            spin(@baseColor, -158);
