--- a/css/bootstrap/scaffolding.less
+++ b/css/bootstrap/scaffolding.less
@@ -8,10 +8,10 @@
 // -----------------
 
 body {
-  background-color: @white;
+  background-color: @baseColor;
   margin: 0;
   #font > .sans-serif(normal,@basefont,@baseline);
-  color: @grayDark;
+  color: @white;
 }
 
 // Container (centered, fixed-width layouts)
