--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,17 +4,20 @@
       <strong>Ryan Houston</strong> is a software engineer, homebrewer, and general tinkerer in the Washington D.C. metro area.
     </p>
 
-    <p>
-      <strong>Email:</strong> ryanhouston83@gmail.com <br />
-      <strong>Github:</strong> <a href="http://github.com/RyanHouston">RyanHouston</a>
-    </p>
+    <dl>
+      <dt>Email</dt>
+      <dd>ryanhouston83 at gmail dot com</dd>
+      <dt>Github</dt>
+      <dd><a href="http://github.com/RyanHouston">RyanHouston</a></dd>
+    </dl>
 
-    <ul class="socials">
-      <li class="twitter"><a href="http://twitter.com/#!/houston_ryan">Twitter</a></li>
-      <li class="facebook"><a href="http://facebook.com/ryan.j.houston">Facebook</a></li>
-      <li class="linkedin"><a href="http://www.linkedin.com/pub/ryan-houston/5/b41/415">Linkedin</a></li>
-    </ul>
-    <div class="clear"></div>
+    <div class="row">
+      <ul class="socials">
+        <li class="twitter"><a href="http://twitter.com/#!/houston_ryan">Twitter</a></li>
+        <li class="facebook"><a href="http://facebook.com/ryan.j.houston">Facebook</a></li>
+        <li class="linkedin"><a href="http://www.linkedin.com/pub/ryan-houston/5/b41/415">Linkedin</a></li>
+      </ul>
+    </div>
   </div>
 
   {% if site.categories %}
