Convert existing css to less

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,9 +6,8 @@
     <meta name="keywords" content="ryan houston, homebrewing, software developer" />
     <meta name="description" content="Software development, homebrewing, and the life that happens in between" />
 
-    <link rel="stylesheet/less" href="/css/bootstrap/bootstrap.less"/>
+    <link rel="stylesheet/less" href="/css/site.less" type="text/less"/>
     <script src="/js/less-1.1.5.min.js"></script>
-    <link rel="stylesheet" href="/css/blog.css" type="text/css"/>
   </head>
   <body>
     <div id="container" class="container">
