--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,8 @@ layout: default
 ---
 
 <div class="post">
-  <h2 class="post-title">{{ page.title }}</h2>
-  <div class="post-date-header">
-    <em>posted on <span class="post-date">{{ page.date | date: "%B %d %Y" }}</span></em>
-  </div>
+
+  {% include post_heading.html %}
 
   {{ content }}
 
