--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -2,9 +2,17 @@
 layout: base
 ---
 <div id="content" class="span12">
-  {% for post in paginator.posts %}
-    {% include post_summary.html %}
-  {% endfor %}
+  <div class="module">
+    <h2>{{ page.title }}</h2>
+    <ul class="unstyled category-listing">
+    {% for post in paginator.posts %}
+      <li class="post-listing">
+        <span class="post-date">{{ post.date | date: "%b %d %Y" }}</span>
+        <a href="{{ post.url }}" class="post-title">{{ post.title }}</a>
+      </li>
+    {% endfor %}
+    </ul>
+  </div>
 
   {% if paginator.next_page or paginator.previous_page %}
     {% include paginator.html %}
