--- a/css/blog.less
+++ b/css/blog.less
@@ -14,8 +14,21 @@
   color: #d77223;
 }
 
-.post-date-header {
-  text-align: right;
+.post-header {
   font-size: .8em;
   margin: 4px;
+}
+
+.post-date {
+  .post-header;
+}
+
+.post-listing .post-date {
+  .post-date;
+  width:  80px;
+  display: inline-block;
+}
+
+.tag {
+  margin: 5px;
 }
