--- a/css/mixins.less
+++ b/css/mixins.less
@@ -1,11 +1,11 @@
-.border() {
+.border {
   border: 2px solid #999;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
 }
 
-.module() {
+.module {
   background: @moduleColor;
   padding: 10px;
   .border;
