--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -5,7 +5,7 @@ layout: base
   <div class="module">
     <h2>{{ page.title }}</h2>
     <ul class="unstyled category-listing">
-    {% for post in paginator.posts %}
+    {% for post in site.categories[page.category] %}
       <li class="post-listing">
         <span class="post-date">{{ post.date | date: "%b %d %Y" }}</span>
         <a href="{{ post.url }}" class="post-title">{{ post.title }}</a>
