--- a/css/bootstrap/patterns.less
+++ b/css/bootstrap/patterns.less
@@ -1020,7 +1020,7 @@ input[type=submit].btn {
   padding: 1px 3px 2px;
   font-size: @basefont * .75;
   font-weight: bold;
-  color: @white;
+  color: @black;
   text-transform: uppercase;
   white-space: nowrap;
   background-color: @grayLight;
