Add batch type attribute

--- a/_layouts/brew.html
+++ b/_layouts/brew.html
@@ -12,9 +12,16 @@ layout: post
 
   <div class="beer-vitals">
 
-    <div class="span3">
-      <span class="label">Batch Size</span>
-      <span class="pull-right">{{ page.beer.vitals.batch-size }}</span>
+    <div class="row">
+      <div class="span3">
+        <span class="label">Batch Type</span>
+        <span class="pull-right">{{ page.beer.vitals.type }}</span>
+      </div>
+
+      <div class="span3">
+        <span class="label">Batch Size</span>
+        <span class="pull-right">{{ page.beer.vitals.batch-size }}</span>
+      </div>
     </div>
 
     <div class="row">
