Fix "Newer Posts" pagination link for first page
Jekyll does not generate a `page1/index.html` so send back to the base
url.

--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -1,7 +1,7 @@
 <div class="navigator">
 
   {% if paginator.previous_page %}
-    <a href="/page{{ paginator.previous_page }}" class="previous-page">Newer Posts</a>
+    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="previous-page">Newer Posts</a>
   {% endif %}
 
   {% if paginator.next_page %}
@@ -9,3 +9,4 @@
   {% endif %}
 
 </div>
+
