Use absolute paths on urls for gh-pages

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,16 +6,16 @@
     <meta name="keywords" content="ryan houston, homebrewing, software developer" />
     <meta name="description" content="Software development, homebrewing, and the life that happens in between" />
 
-    <link rel="stylesheet/less" href="/css/site.less" type="text/less"/>
-    <script src="/js/less-1.1.5.min.js"></script>
-    <link rel="stylesheet" href="/css/syntax.css" type="text/css"/>
+    <link rel="stylesheet/less" href="{{ site.url }}/css/site.less" type="text/less"/>
+    <script src="{{ site.url }}/js/less-1.1.5.min.js"></script>
+    <link rel="stylesheet" href="{{ site.url }}/css/syntax.css" type="text/css"/>
   </head>
   <body>
     <div id="container" class="container">
       <div id="header" class="row">
         <div class="row span16">
-          <a href="/">
-            <img src="/images/houston_banner3.png"/>
+          <a href="{{ site.url }}">
+            <img src="{{ site.url }}/images/houston_banner3.png"/>
           </a>
         </div>
         <div id="tagline" class="row span16">
