Revert "Use absolute paths on urls for gh-pages"
This reverts commit d2be62fe5a6ef6eb7d8bc098c6c86c565891c5d5.

Not necessary with a custom domain serving from the root url

--- a/_includes/post_heading.html
+++ b/_includes/post_heading.html
@@ -3,7 +3,7 @@
 </h2>
 <div class="post-header">
   {% for category in page.categories %}
-    <a href="{{ site.url }}/categories/{{ category }}" class="tag"> {{ category }} </a>
+    <a href="/categories/{{ category }}" class="tag"> {{ category }} </a>
   {% endfor %}
   <div class="pull-right">
     <em class="post-date">{{ page.date | date: "%B %d %Y" }}</em>
