--- a/_includes/post_heading.html
+++ b/_includes/post_heading.html
@@ -3,7 +3,7 @@
 </h2>
 <section class="post-meta">
   {% for category in page.categories %}
-    <a href="/categories/{{ category }}" class="post-tag"> {{ category }} </a>
+    <a href="/tags#{{ category }}" class="post-tag"> {{ category }} </a>
   {% endfor %}
   <div class="post-date">{{ page.date | date: "%B %d %Y" }}</div>
 </section>
