--- a/_includes/post_heading.html
+++ b/_includes/post_heading.html
@@ -2,8 +2,8 @@
   <a href="{{ page.url }}" class="post-link">{{ page.title }}</a>
 </h2>
 <section class="post-meta">
+  <div class="post-date">{{ page.date | date: "%B %d, %Y" }}</div>
   {% for category in page.categories %}
     <a href="/tags#{{ category }}" class="post-tag"> {{ category }} </a>
   {% endfor %}
-  <div class="post-date">{{ page.date | date: "%B %d %Y" }}</div>
 </section>
