Update some basic styles
  - Enlarge base font size to 16px
  - Make `inline code` stand out a bit more

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -54,6 +54,14 @@ blockquote {
   font-style: italic;
 }
 
+code {
+  color: #efefef;
+  margin: 0 4px;
+  padding: 4px 6px;
+  background: #191919;
+  border-radius: 2px;
+}
+
 pre {
   padding: 8px 15px;
   background: #191919;
