--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,11 @@
-$site-background-color: #252525;
 $site-width: 650px;
-$default-font-color: #f0e7d5;
 $default-font-size: 16px;
+$default-font-color: #f0e7d5;
+$border-radius: 4px;
+
+$site-background-color: #252525;
 $link-color: #ffcc00;
-$header-color: #e8e8e8;
+$headers-color: #e8e8e8;
+$soft-black: #191919;
+$soft-white: #efefef;
+$border-gray: #434343;
