--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="google-site-verification" content="65eWEmqUlnui7etx-es-wAcD9g0GZ_F7ynOyigE65-0" />
     <title>{{ page.title | default: site.title }} by {{ site.author }}</title>
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i">
