--- a/_sass/posts.scss
+++ b/_sass/posts.scss
@@ -10,10 +10,7 @@
   .post-date {
     display: inline-block;
     min-width: 150px;
-  }
-
-  .post-title {
-    font-size: 1.2em;
+    font-size: .9em;
   }
 
   @media(max-width: 600px) {
